# beads

./: README.md  pyproject.toml
src/beads/: __init__.py  store.py  types.py
tests/: test_bead_store_new.py  test_new_bead_types.py  test_new_types.py
